# gemini_aimaze

./: CHANGELOG.md  GEMINI.md  README.md  main.py  pyproject.toml
.github/: copilot-instructions.md
.ideas/: idea1_mvp.md  idea2_mvp.md  idea3_mvp.md  idea4_mvp.md  idea5_mvp.md  idea6_mvp.md  idea7_mvp.md  mvp.md
ai/: director_ai.py  llm_client.py  memory_extractor.py  narrator_ai.py  npc_ai.py
docs/: EVALUACION_FASE2.md  EVALUACION_FASE3.md  EVALUACION_MVP.md  Entorno_tecnologico.md  Fase2.md  Fase3.md  PROJECT_SUMMARY.md  REPORTE_EVALUACION_FASE2.md  REPORTE_EVALUACION_MVP.md  arquitectura.md  general_ia.md  planteamiento_ia.md
docs/old/: copilot-instructions.md
engine/: command_parser.py  event_engine.py  map_engine.py  puzzle_engine.py
gameplay/: game_loop.py
models/: room.py  state.py
tests/: test_command_parser.py  test_director_ai.py  test_event_engine.py  test_llm_client.py  test_map_engine.py  test_memory_extractor.py  test_models.py  test_narrator_ai.py  test_npc_ai.py  test_puzzle_engine.py
